# bst

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bst_common.h  bst_mt_cas.h  bst_mt_gmtx.c  bst_mt_gmtx.h  bst_mt_grwl.c  bst_mt_grwl.h  bst_mt_lmtx.c  bst_mt_lmtx.h  bst_mt_lrwl.c  bst_mt_lrwl.h  bst_st.c  bst_st.h  build.sh  checkmem.sh  checkthreading.sh  main.c  run_test.sh  run_tests.sh  test_bst.c  test_mt_gmtx.c  test_st.c
results/: metricas2.xlsx
src/: CMakeLists.txt  bst_common.c  main.c
src/bst_at/: CMakeLists.txt  bst_at.c
src/bst_at/include/: bst_at.h
src/bst_mt_cgl/: CMakeLists.txt  bst_mt_cgl.c
src/bst_mt_cgl/include/: bst_mt_cgl.h
src/bst_mt_fgl/: CMakeLists.txt  bst_mt_fgl.c
src/bst_mt_fgl/include/: bst_mt_fgl.h
src/bst_mt_grwl/: CMakeLists.txt  bst_mt_grwl.c
src/bst_mt_grwl/include/: bst_mt_grwl.h
src/bst_mt_lrwl/: CMakeLists.txt  bst_mt_lrwl.c
src/bst_mt_lrwl/include/: bst_mt_lrwl.h
src/bst_st/: CMakeLists.txt  bst_st.c
src/bst_st/include/: bst_st.h
src/include/: bst_common.h
